--- a/src/lib/i18n/en/congregation.json
+++ b/src/lib/i18n/en/congregation.json
@@ -3,22 +3,19 @@
 	"accessHealthSafety": "Access, Health & Safety",
 	"accessibility": {
 		"accessibility": "Accessibility",
-		"ada": "ADA accessibility",
-		"asl": "ASL interpretation",
+		"ada": "Wheelchair accessibility",
+		"asl": "Interpretive sign-language",
 		"cc": "Closed captioning",
 		"eva": "EVA transcriptions",
 		"extended": "Which of the following accessibility will be available?",
-		"hybrid_automatedCaptions": "Automated captions, online access to hybrid services",
-		"hybrid_liveCaptions": "Live captions, online access to hybrid services",
-		"inPerson_adaAll": "ADA-compliant location for all in-person services",
-		"inPerson_adaSome": "ADA-compliant location for some in-person services",
-		"inPerson_asl": "ASL interpretation, in person",
+		"inPerson_adaAll": "Wheelchair-accessible location for all in-person services",
+		"inPerson_adaSome": "Wheelchair-accessible location for some in-person services",
+		"inPerson_asl": "Interpretive sign-language, in person",
 		"inPerson_eva": "EVA transcriptions, in person",
 		"note": "If participants must request accessibility in advance, please add that detail in the 'Other' field.",
-		"online_asl": "ASL interpretation, online",
+		"online_asl": "Interpretive sign-language, online",
 		"online_automatedCaptions": "Automated captions, online",
-		"online_liveCaptions": "Live captions, online",
-		"short": "Accomms."
+		"online_liveCaptions": "Live captions, online"
 	},
 	"add": "Add",
 	"addCongregation": "Add congregation",
